[gd_scene load_steps=6 format=3 uid="uid://bnnuln6wj2vki"]

[ext_resource type="Script" path="res://Game/DialogueUI/dialogue_ui.gd" id="1_ueskx"]
[ext_resource type="Texture2D" uid="uid://cl5fixtqy6i28" path="res://Assets/Art/Dialogue Box.png" id="2_tmyqy"]
[ext_resource type="FontFile" uid="uid://17om4asong12" path="res://Game/Font/Masonic Lodge.otf" id="3_13ad8"]
[ext_resource type="Texture2D" uid="uid://1fvf86up1deb" path="res://Assets/Jormungandr/jormungandr.png" id="3_nct1t"]
[ext_resource type="Texture2D" uid="uid://drwf3c5h6y6f" path="res://Assets/Art/DEMO GUY 2D.png" id="5_4qjqb"]

[node name="DialogueUI" type="CanvasLayer"]
script = ExtResource("1_ueskx")

[node name="Background" type="TextureRect" parent="."]
offset_left = 309.0
offset_top = 548.0
offset_right = 4569.0
offset_bottom = 1688.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_tmyqy")

[node name="SpeakerName" type="RichTextLabel" parent="."]
z_index = 1
offset_left = 368.0
offset_top = 624.0
offset_right = 668.0
offset_bottom = 674.0
scale = Vector2(0.5, 0.5)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_13ad8")
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "Jormungandr
"
autowrap_mode = 0

[node name="DialogueText" type="RichTextLabel" parent="."]
z_index = 1
offset_left = 502.0
offset_top = 626.0
offset_right = 1040.0
offset_bottom = 675.0
scale = Vector2(0.65, 0.65)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_13ad8")
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "Placeholder text"

[node name="Speaker" type="Sprite2D" parent="."]
position = Vector2(1084, 421)
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_nct1t")

[node name="DemoGuy2d" type="Sprite2D" parent="."]
position = Vector2(195, 273)
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_4qjqb")
